name:                DarkstarAH
version:             0.1.0.0
synopsis:            Darkstar AH report server
description:         This server will return ah data for darkstar projects
homepage:            https://github.com/mac10688/DarkstarAH#readme
license:             BSD3
license-file:        LICENSE
author:              Ghaleon
maintainer:          Nonya@email.com
copyright:           2017 Ghaleon
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable DarkstarAH
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:
                       Darkstar.Queries
                       Darkstar.Models
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , Spock >= 0.11
                     , mtl
                     , text
                     , aeson
                     , bytestring
                     , aeson-pretty
                     , time
                     , io-streams
                     , monad-logger
                     , resourcet
                     , mysql-haskell
                     , wai-middleware-static
